# deepclr

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
configs/scenarios/: kitti_00-10.yaml  kitti_04_10.yaml  kitti_07-10.yaml  kitti_11-21.yaml  kitti_pairs.yaml  kitti_small.yaml  modelnet40_seen.yaml  modelnet40_small.yaml  modelnet40_unseen.yaml
configs/training/: kitti_00-03_05-09.yaml  kitti_00-06.yaml  kitti_00-10.yaml  kitti_base.yaml  kitti_pairs.yaml  modelnet40.yaml
deepclr/config/: __init__.py  config.py  utils.py
deepclr/data/: __init__.py  build.py  labels.py
deepclr/engine/: __init__.py  engines.py  loss.py  trainer.py
deepclr/evaluation/: __init__.py  data.py  evaluator.py  metrics.py  plot.py  scenario.py
deepclr/icp/: __init__.py  icp.py
deepclr/models/: __init__.py  base.py  build.py  deepclr.py  helper.py
deepclr/solver/: __init__.py  build.py  optimizers.py  schedulers.py
deepclr/utils/: checkpoint.py  factory.py  logging.py  metrics.py  parsing.py  path.py  pcv.py  quaternion.py  tensor.py
doc/: .gitignore  Makefile  conf.py  index.rst
docker/: build_docker.sh  docker2singularity.sh  python_singularity.sh  run_docker.sh  run_tensorboard.sh
docker/dockerfiles/: deploy.Dockerfile  deps.Dockerfile
models/kitti_00-03_05-09/: model_config.yaml  weights.tar
models/kitti_00-06/: weights.tar
models/kitti_00-10/: weights.tar
models/kitti_pairs/: weights.tar
scripts/: evaluation.py  export_kitti_poses.py  icp.py  inference.py  run_icp.sh  run_inference.sh  timing.py  training.py
(+33 files in other folders)
