[metadata]
name = deepclr
version = attr: deepclr.VERSION
description = DeepCLR: Correspondence-Less Architecture for Deep End-to-End Point Cloud Registration
long_description = file: README.md, LICENSE
license = Apache License 2.0
classifiers =
    Framework :: PyTorch
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8


[options]
zip_safe = False
include_package_data = False
packages = find:

[options.packages.find]
include =
    deepclr
    deepclr.*

[build-system]
requires =
    setuptools >= 40.9.0
    wheel


[flake8]
exclude =
    .mypy_cache
    .pytest_cache
    .venv
    venv
    .git
    __pycache__
    configs
    doc
    docker
    extern
max-line-length = 120


[mypy]
# files checked by default:
files = deepclr/**/*.py,scripts/**/*.py,tests/**/*.py

# many libraries do not have type hints
ignore_missing_imports = True

# various options
disallow_incomplete_defs = True
check_untyped_defs = True
warn_unused_ignores = True


[tool:pytest]
filterwarnings =
    ignore:.*Using or importing the ABCs*:DeprecationWarning
    ignore::DeprecationWarning:transforms3d
testpaths = tests
